--- a/experiences.html
+++ b/experiences.html
@@ -1,17 +1,17 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <!-- Ceci est un commentaire -->
 <html>
 <head>
-    <title>E-portfolio - Compétences</title>
-    <meta charset="utf-8">
+    <title>E-portfolio - Expériences</title>
+    <meta charset="utf-8"> <!-- Obligatoire -->
     <link rel="stylesheet" type="text/css" href="CSS/style.css"> <!-- Obligatoire -->
 
-    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
-    <link rel="stylesheet" type="text/css" href="css_boostrap/bootstrap.rtl.min.css"> <!-- css de boostrap -->
+   <link rel="stylesheet" type="text/css" href="css_boostrap/bootstrap.rtl.min.css"> <!-- css de boostrap -->
     <link rel="stylesheet" type="text/css" href="css/style.css">  <!-- css perso, en dernier il a le dernier mot -->
 
 </head>
 <body>
+
     <!-- ********************** début de la barre de navigation ********************** -->
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -36,82 +36,59 @@
         </div>
     </nav>
 
-    <!-- ********************** fin de la barre de navigation   ********************** -->
+    <!-- **********************  fin de la barre de navigation  ********************** -->
 
     <!-- **********************    début du groupe de carte     ********************** -->
     <section id="section-projets">
         <br>
-        <h2>Projets scolaires</h2>
+        <h2>Expériences</h2>
         <br>
-        <p>Les projets réalisés au sein de l'IUT sont conçus pour être professionnalisant. Ils permettent de développer différentes compétences techniques et humaines. </p>
+        <p> D'autres expériences sont disponibles sur mon 
+            <a target="_blank" href="https://www.linkedin.com/in/william-lefebvre-a924a1187?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B65AH%2BEnwTQqNJfKlkhYw4g%3D%3D">
+                LinkedIn
+            </a>
+            . <br>Ici je mentionnerait uniquement deux de ces expériences, qui sont particulièrement en rapport avec la data et mon projet professionel.
+        </p>
         <div class="card-group">
             
             <div class="card">
-                <img src="Image/logo_SaeRegression.png" class="card-img-top-projets" alt="logo_SaeRegression">
+                <img src="Image/logo_FnacDarty.jpg" class="card-img-top-exp" alt="logo_FnacDarty">
                 <div class="card-body">
-                    <h5 class="card-title">Régression sur données réelles</h5>
-                    <br>
+                    <h5 class="card-title">Alternance - FnacDarty</h5>
+                    <h9> 2024-2026 </h9>
+                    <br><br>
                     <p class="card-text">
-                        Projet statistique de première année réalisé en binôme sur une durée d'une semaine. Nous modélisons statistiquement des données dans l'objectif de mettre en avant un lien entre deux populations.
+                        Assistant Data Analyst au sein de la direction marketing, je réalise des études ad-hoc, des reporting et des ciblages dans l'objectifs de développer la "connaissance client".
                     </p>
                     <p class="card-text">
-                        <i>Réalisation de code en R, Applications de méthodes statistiques, Réponse à une problématique posée.</i>
+                        <i>Suivi de KPI, Requêtage, Présentation des résultats.</i>
                     </p>
                     <br />
 
-                    <img src="image/logo_R.png" class="card-img-logo" alt="logo_R" title="R">
+                    <img src="image/logo_gcp.png" class="card-img-logo" alt="logo_gcp" title="Google Cloup Platform">
+                    <img src="image/logo_sql.png" class="card-img-logo" alt="logo_sql" title="SQL">
+                    <img src="image/logo_sas.png" class="card-img-logo" alt="logo_sas" title="SAS">
                     <img src="image/logo_office.png" class="card-img-logo" alt="logo_office" title="Suite Office">
                         
                 </div>
-                <a href="documents/rapports/Rapport final - SAE_Regression_LEFEBVRE_ZUK_Données29.pdf" 
-                    download="Rapport final - SAE_Regression_LEFEBVRE_ZUK_Données29.pdf" target="_blank">
-                    <button type="button" class="btn btn-outline-primary">Télécharger le rapport</button>
-                </a>
             </div>
             <div class="card">
-                <img src="Image/logo_SaeIntegration.png" class="card-img-top-projets" alt="logo_SaeIntegration">
+                <img src="Image/logo_spa.png" class="card-img-top-exp" alt="logo_spa">
                 <div class="card-body">
-                    <h5 class="card-title">Intégration de données dans un DW</h5>
+                    <h5 class="card-title">Opérateur administratif - La SPA</h5>
+                    <h9> 2022-2023 </h9>
+                    <br><br>
+                    <p class="card-text">
+                        Au sein du service enquête de la SPA, je suis chargé du recueil, de la saisie et du suivi des signalements de maltraitance animale. Je m'occupe de conseiller les signalants et de déclencher le processus d'enquête.
+                    </p>
+                    <p class="card-text">
+                        <i>Relation avec le terrain, Création de la donnée.</i>
+                    </p>
                     <br>
-                    <p class="card-text">
-                        Projet informatique de deuxième année réalisé en trinôme sur l'ensemble d'un semestre. Nous modélisons puis créons un Système d'Information Décisionnel (SID) à partir de bases de données hétérogènes dans le but de réaliser des analyses et tableaux de bords.
-                    </p>
-                    <p class="card-text">
-                        <i>Modélisation de SID, Processus ETL, Réalisation de tableaux de bords.</i>
-                    </p>
-                    <br />
 
-                    <img src="image/logo_powerbi.png" class="card-img-logo" alt="logo_powerbi" title="PowerBi">
+                    <img src="image/animaux.svg" class="card-img-logo" alt="logo_animaux" title="*miaulement*">
                     <img src="image/logo_office.png" class="card-img-logo" alt="logo_office" title="Suite Office">
                 </div>
-                <a href="documents/rapports/Rapport final - SAE Integration DW.pdf" 
-                    download="Rapport final - SAE Integration DW.pdf" target="_blank">
-                    <button type="button" class="btn btn-outline-primary">Télécharger le rapport</button>
-                </a>
-            </div>
-            <div class="card">
-                <img src="Image/logo_SaeProjet.png" class="card-img-top-projets" alt="logo_SaeProjet">
-                <div class="card-body">
-                    <h5 class="card-title">Etude d'impact d'une technique médicale</h5>
-                    <br>
-                    <p class="card-text">
-                        Projet de première année réalisé sur l'ensemble d'un semestre. Description de données et tests statistiques pour répondre à une problématique donnée. Comprends une partie "conduite de projet".
-                    </p>
-                    <p class="card-text">
-                        <i>Applications de méthodes statistiques, Organisation d'un projet d'ampleur.</i>
-                    </p>
-                    <br />
-
-                    <img src="image/logo_R.png" class="card-img-logo" alt="logo_R" title="R">
-                    <img src="image/logo_access.png" class="card-img-logo" alt="logo_access" title="Access">
-                    <img src="image/logo_office.png" class="card-img-logo" alt="logo_office" title="Suite Office">
-
-            </div>
-            <a href="documents/rapports/Rapport final - SAE Integration DW.pdf" 
-                    download="Rapport final - SAE Integration DW.pdf" target="_blank">
-                    <button type="button" class="btn btn-outline-primary">Télécharger le rapport</button>
-                </a>
-        </div>
     </section>
     <!-- **********************     fin du groupe de carte      ********************** -->
 
