--- a/competences.html
+++ b/competences.html
@@ -47,7 +47,7 @@
         <div class="card-group">
             
             <div class="card">
-                <img src="Image/logo_SaeRegression.png" class="card-img-top-projets" alt="logo_SaeRegression">
+                <img src="image/logo_SaeRegression.png" class="card-img-top-projets" alt="logo_SaeRegression">
                 <div class="card-body">
                     <h5 class="card-title">Régression sur données réelles</h5>
                     <br>
@@ -69,7 +69,7 @@
                 </a>
             </div>
             <div class="card">
-                <img src="Image/logo_SaeIntegration.png" class="card-img-top-projets" alt="logo_SaeIntegration">
+                <img src="image/logo_SaeIntegration.png" class="card-img-top-projets" alt="logo_SaeIntegration">
                 <div class="card-body">
                     <h5 class="card-title">Intégration de données dans un DW</h5>
                     <br>
@@ -77,7 +77,7 @@
                         Projet informatique de deuxième année réalisé en trinôme sur l'ensemble d'un semestre. Nous modélisons puis créons un Système d'Information Décisionnel (SID) à partir de bases de données hétérogènes dans le but de réaliser des analyses et tableaux de bords.
                     </p>
                     <p class="card-text">
-                        <i>Modélisation de SID, Processus ETL, Réalisation de tableaux de bords.</i>
+                        <i>Modélisation de SID, Processus ETL, Visualisation.</i>
                     </p>
                     <br />
 
@@ -90,7 +90,7 @@
                 </a>
             </div>
             <div class="card">
-                <img src="Image/logo_SaeProjet.png" class="card-img-top-projets" alt="logo_SaeProjet">
+                <img src="image/logo_SaeProjet.png" class="card-img-top-projets" alt="logo_SaeProjet">
                 <div class="card-body">
                     <h5 class="card-title">Etude d'impact d'une technique médicale</h5>
                     <br>
