--- a/experiences.html
+++ b/experiences.html
@@ -52,7 +52,7 @@
         <div class="card-group">
             
             <div class="card">
-                <img src="Image/logo_FnacDarty.jpg" class="card-img-top-exp" alt="logo_FnacDarty">
+                <img src="image/logo_FnacDarty.jpg" class="card-img-top-exp" alt="logo_FnacDarty">
                 <div class="card-body">
                     <h5 class="card-title">Alternance - FnacDarty</h5>
                     <h9> 2024-2026 </h9>
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="Image/logo_spa.png" class="card-img-top-exp" alt="logo_spa">
+                <img src="image/logo_spa.png" class="card-img-top-exp" alt="logo_spa">
                 <div class="card-body">
                     <h5 class="card-title">Opérateur administratif - La SPA</h5>
                     <h9> 2022-2023 </h9>
