--- a/experiences.html
+++ b/experiences.html
@@ -3,11 +3,10 @@
 <html>
 <head>
     <title>E-portfolio - Expériences</title>
-    <meta charset="utf-8"> <!-- Obligatoire -->
-    <link rel="stylesheet" type="text/css" href="CSS/style.css"> <!-- Obligatoire -->
+    <meta charset="utf-8"> 
 
-   <link rel="stylesheet" type="text/css" href="css_boostrap/bootstrap.rtl.min.css"> <!-- css de boostrap -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">  <!-- css perso, en dernier il a le dernier mot -->
+   <link rel="stylesheet" type="text/css" href="css_boostrap/bootstrap.rtl.min.css"> <!-- les css -->
+    <link rel="stylesheet" type="text/css" href="css/style.css"> 
 
 </head>
 <body>
@@ -99,7 +98,6 @@
         <a onclick="openForm()" >
             <p>Me contacter</p>
         </a>
-    <!--<button type="button" class="mbt" onclick="openForm()">Envoyer</button>-->
 
         <div class="formulaire-popup" id="myform">
             <form class="formulaire-container" >
