--- a/competences.html
+++ b/competences.html
@@ -1,14 +1,11 @@
 ﻿<!DOCTYPE html>
-<!-- Ceci est un commentaire -->
 <html>
 <head>
     <title>E-portfolio - Compétences</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="CSS/style.css"> <!-- Obligatoire -->
 
-    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
-    <link rel="stylesheet" type="text/css" href="css_boostrap/bootstrap.rtl.min.css"> <!-- css de boostrap -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">  <!-- css perso, en dernier il a le dernier mot -->
+    <link rel="stylesheet" type="text/css" href="css_boostrap/bootstrap.rtl.min.css"> <!-- les css -->
+    <link rel="stylesheet" type="text/css" href="css/style.css">  
 
 </head>
 <body>
