correction footer + header
- généralisation correction footer
- bouton header

--- a/formation.html
+++ b/formation.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<!-- Ceci est un commentaire -->
-<html>
+<html lang="fr">
 <head>
     <title>E-portfolio - William Lefebvre (2025)</title>
     <meta charset="utf-8"> 
@@ -10,7 +9,6 @@
 
 </head>
 <body>
-
     <!-- ********************** début de la barre de navigation ********************** -->
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -36,7 +34,9 @@
     </nav>
 
     <!-- ********************** fin de la barre de navigation   ********************** -->
-
+    <div class="content">
+        
+    </div>
     <!-- *************************     footer & co     ************************* -->
 
     <footer>
