--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 ﻿<!DOCTYPE html>
-<!-- Ceci est un commentaire -->
-<html>
+<html lang="fr">
 <head>
     <title>E-portfolio - William Lefebvre (2025)</title>
     <meta charset="utf-8"> 
