link update - competences.html
- link update - competences.html

--- a/competences.html
+++ b/competences.html
@@ -105,7 +105,7 @@
                         <img src="image/logo_office.png" class="card-img-logo" alt="logo_office" title="Suite Office">
 
                 </div>
-                <a href="documents/rapports/Rapport final - SAE Integration DW.pdf" 
+                <a href="documents/rapports/Rapport statistique - SAEprojet_CAI_DE RIDDER_LEFEBVRE_TRAORE.pdf" 
                         download="Rapport final - SAE Integration DW.pdf" target="_blank">
                         <button type="button" class="btn btn-outline-primary">Télécharger le rapport</button>
                     </a>
